# rust-crud-toy

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/entity/: mod.rs
src/po/: mod.rs
src/repository/: condition.rs  mod.rs
src/repository/mongodb/: mod.rs  user.rs  workspace.rs
src/route/: mod.rs  request_object.rs  workspace.rs
src/service/: mod.rs  workspace.rs
