[package]
authors = ["Hzqi <Hzqi_110@hotmail.com>"]
edition = "2018"
name = "crud-toy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
futures = {version = "0.3", default-features = false}
log = "0.4"
mongodb = {git = "https://github.com/mongodb/mongo-rust-driver"}
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
